# launch-deck-live-tauri-app

./: .gitignore  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  unocss.config.ts
.github/workflows/: release.yml
ai/: 1.md
app/: app.config.ts  app.vue
app/layouts/: default.vue
app/modules/: tauri.ts
app/pages/: [...all].vue  index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
