[package]
name = "launch-deck-live-tauri-app"
version = "0.0.0"
description = "Starter template for Nuxt 3 and Tauri 2"
authors = [ "Lanseria" ]
license = "MIT"
repository = "https://github.com/lanseria/launch-deck-live-tauri-app"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.2.0"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.2.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-store = "2.2.0"
serde_json = "1"

[dependencies.tauri]
version = "2.5.1"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
